--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Amen",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "devDependencies": {
     "app-framework": "^1.19.4",
     "js-beautify": "^1.6.12",
@@ -29,7 +29,7 @@
     "zip": "node node_modules/app-framework/scripts/deprecated",
     "f7": "node node_modules/app-framework/scripts/f7-update",
     "f7vue": "node_modules/app-framework/scripts/f7vue-update",
-    "iconfonts": "node_modules/app-framework/scripts/iconfonts",
+    "iconfonts": "node_modules/app-framework/scripts/iconfonts"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -79,14 +79,16 @@
     "recursive-readdir-sync": "^1.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
+    "simple-vue-validator": "^0.14.2",
     "sort-keys-recursive": "^2.0.1",
     "to-ico": "^1.1.3",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "vue": "^2.5.11",
+    "vee-validate": "^2.0.0-rc.27",
+    "vue": "^2.5.13",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.5.11",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
