--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Amen",
-  "version": "3.0.0",
+  "version": "7.0.0",
   "devDependencies": {
-    "app-framework": "^1.19.4",
+    "app-framework": "^1.20.0",
     "js-beautify": "^1.6.12",
     "jsdom": "^9.12.0"
   },
@@ -26,10 +26,7 @@
     "storage": "node node_modules/app-framework/scripts/firebase --storage",
     "studio": "node node_modules/app-framework/scripts/cordova --studio",
     "xcode": "node node_modules/app-framework/scripts/cordova --xcode",
-    "zip": "node node_modules/app-framework/scripts/deprecated",
-    "f7": "node node_modules/app-framework/scripts/f7-update",
-    "f7vue": "node_modules/app-framework/scripts/f7vue-update",
-    "iconfonts": "node_modules/app-framework/scripts/iconfonts"
+    "zip": "node node_modules/app-framework/scripts/deprecated"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -42,7 +39,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "cordova": "^7.0.1",
     "css-loader": "^0.27.3",
-    "eslint": "^4.9.0",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
@@ -71,7 +68,7 @@
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
-    "offline-plugin": "^4.7.0",
+    "offline-plugin": "^4.9.0",
     "on-build-webpack": "^0.1.0",
     "opn": "^4.0.2",
     "package-json": "^4.0.1",
@@ -84,11 +81,16 @@
     "to-ico": "^1.1.3",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "vee-validate": "^2.0.0-rc.27",
+    "vee-validate": "^2.0.2",
     "vue": "^2.5.13",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.5.13",
+    "vue2-datatable-component": "^2.1.26",
+    "vue2-google-maps": "^0.8.4",
+    "vue2-leaflet": "0.0.57",
+    "vue2-leaflet-markercluster": "^1.2.0",
+    "vue2-leaflet-tracksymbol": "^1.0.8",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
